# bevy_diagnostic_vertex_count

./: Cargo.toml  README.md
src/: lib.rs
