[package]
name = "bevy_diagnostic_vertex_count"
version = "0.3.0"
description = "Bevy diagnostics plugin for counting vertices of all present meshes in a world"
authors = ["johnbchron"]
license = "Apache-2.0 OR MIT"
keywords = ["bevy", "diagnostic", "vertex", "mesh", "count"]
categories = []
exclude = []
edition = "2021"
readme = "README.md"
repository = "https://github.com/johnbchron/bevy_diagnostic_vertex_count"

[dependencies]
bevy = { version="0.11.0", default-features = false, features=["bevy_asset", "bevy_render"] }
